--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <body style="background-color: #18191A;">
 
 <h1>Cyno's arcade</h1>
-
+<h6>To search, do "ctrl + f" then type in game name.</h6>
+  
 <ul>
 -<li><a href="cl10bullets.html">10 bullets</a></li>
  <li><a href="cl10minutestilldawn.html">10 minutes till dawn</a></li>
