--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
  <li><a href="clcolormatch.html">Color match</a></li>
  <li><a href="clcolorwatersort3d.html">Color water sort 3d</a></li>
  <li><a href="clcombopool.html">Combo pool</a></li>
-<li><a href="clcookieclicker.html">Cookie Clicker</a></li>
+<li><a href="clcookieclickercool.html">Cookie Clicker</a></li>
  <li><a href="clcoreball.html">Core ball</a></li>
  <li><a href="clcrazycattle3d.html">Crazy cattle 3d</a></li>
  <li><a href="clcrazycrashlanding.html">Crazy crash landing</a></li>
